# my_bot

./: .env.example  .gitignore  Makefile  README.md  a_stock.py  crypto.py  main.py  pyproject.toml  test_crypto.py
.github/workflows/: cron.yml
